--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -63,8 +63,10 @@
         android:layout_height="50dp"
         android:layout_marginTop="560dp"
         android:background="@drawable/rounded_edittext"
+        android:focusable="true"
         android:padding="2dp"
-        android:src="@drawable/iconGoogle"
+        android:src="@drawable/icongoogle"
+        android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,10 +89,13 @@
         android:layout_width="53dp"
         android:layout_height="46dp"
         android:layout_marginTop="68dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/LogoApp" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/logoapp" />
 
     <TextView
         android:id="@+id/targetDaftar"
