--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -113,14 +113,17 @@
         android:id="@+id/logo1"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="560dp"
         android:background="@drawable/rounded_edittext"
+        android:clickable="true"
+        android:focusable="true"
         android:padding="2dp"
-        android:src="@drawable/iconGoogle"
+        android:src="@drawable/icongoogle"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.82" />
 
     <TextView
         android:id="@+id/textView5tv2"
@@ -142,7 +145,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/LogoApp" />
+        app:srcCompat="@drawable/logoapp" />
 
     <TextView
         android:id="@+id/targetDaftar"
