--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,98 +13,107 @@
         android:id="@+id/textView"
         android:layout_width="156dp"
         android:layout_height="34dp"
-        android:layout_marginStart="124dp"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="24dp"
         android:text="Masuk Akun"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         android:typeface="sans"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
         android:id="@+id/masuk_kolom_email"
         android:layout_width="306dp"
         android:layout_height="48dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="248dp"
-        android:ems="10"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_edittext"
+        android:ems="10"
+        android:hint="Isi email Anda di sini.."
         android:inputType="textEmailAddress"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:hint="Isi email Anda di sini.."
-        android:textSize="14dp"
+        android:textColor="@color/black"
         android:textColorHint="#949494"
-        android:textColor="#000000"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/daftar_labelEmail" />
 
     <TextView
-        android:id="@+id/label_email"
-        android:layout_width="116dp"
+        android:id="@+id/daftar_labelEmail"
+        android:layout_width="46dp"
         android:layout_height="19dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="228dp"
-        android:textColor="#000000"
+        android:layout_marginTop="24dp"
         android:text="Email"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.142"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
-        android:id="@+id/label_password"
-        android:layout_width="114dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="330dp"
-        android:textColor="#000000"
+        android:id="@+id/password_labelPassword"
+        android:layout_width="69dp"
+        android:layout_height="22dp"
+        android:layout_marginTop="20dp"
         android:text="Password"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.152"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/masuk_kolom_email" />
 
     <EditText
         android:id="@+id/masuk_kolom_password"
         android:layout_width="306dp"
         android:layout_height="48dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/rounded_edittext"
         android:ems="10"
+        android:hint="Isi password Anda di sini.."
         android:inputType="textPassword"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:textSize="14dp"
-        android:hint="Isi password Anda di sini.."
+        android:textColor="@color/black"
         android:textColorHint="#949494"
-        android:textColor="#000000"
+        android:textSize="1sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/password_labelPassword" />
 
     <Button
         android:id="@+id/masuk_tombol"
-        android:layout_width="305dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="436dp"
-        android:backgroundTint="#1E49CB"
+        android:layout_width="313dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/primary"
         android:fontFamily="sans-serif-medium"
         android:text="Masuk Akun"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:typeface="sans"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/masuk_kolom_password"
+        app:layout_constraintVertical_bias="0.019" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="216dp"
         android:text="atau masuk dengan"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -113,6 +122,7 @@
         android:id="@+id/logo1"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/rounded_edittext"
         android:clickable="true"
         android:focusable="true"
@@ -120,43 +130,44 @@
         android:src="@drawable/icongoogle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.82" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.068" />
 
     <TextView
         android:id="@+id/textView5tv2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="40dp"
         android:text="Belum punya akun?"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.293"
+        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/targetDaftar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:text="Daftar dulu yuk"
+        android:textColor="@color/primary"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.694"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="53dp"
         android:layout_height="46dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logoapp" />
-
-    <TextView
-        android:id="@+id/targetDaftar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="212dp"
-        android:layout_marginBottom="52dp"
-        android:text="Daftar dulu yuk"
-        android:textColor="#1E49CB"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
