--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,189 +5,202 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".Register"
-    android:background="@drawable/background">
+    tools:layout_editor_absoluteX="1dp"
+    tools:layout_editor_absoluteY="-37dp">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="156dp"
         android:layout_height="34dp"
-        android:layout_marginStart="124dp"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="100dp"
         android:text="Daftar Akun"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         android:typeface="sans"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/label_email"
-        android:layout_width="116dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="204dp"
-        android:text="Email"
-        android:textColor="#000000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/label_password"
-        android:layout_width="114dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="368dp"
-        android:text="Password"
-        android:textColor="#000000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="196dp"
-        android:text="atau daftar dengan"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/logo1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="560dp"
-        android:background="@drawable/rounded_edittext"
-        android:focusable="true"
-        android:padding="2dp"
-        android:src="@drawable/icongoogle"
-        android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView5tv2"
+        android:id="@+id/password_labelPassword"
+        android:layout_width="114dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="16dp"
+        android:text="Password"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.185"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/daftar_kolom_nama" />
+
+    <TextView
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="52dp"
-        android:text="Sudah punya akun?"
-        android:textColor="#000000"
+        android:layout_marginTop="28dp"
+        android:text="atau daftar dengan"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/daftar_tombol" />
+
+    <ImageView
+        android:id="@+id/logo1"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/rounded_edittext"
+        android:clickable="true"
+        android:focusable="true"
+        android:padding="2dp"
+        android:src="@drawable/icongoogle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.288"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.181" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="53dp"
         android:layout_height="46dp"
-        android:layout_marginTop="68dp"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.68"
         app:srcCompat="@drawable/logoapp" />
 
     <TextView
         android:id="@+id/targetDaftar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="204dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="32dp"
         android:text="Langsung masuk aja"
-        android:textColor="#1E49CB"
+        android:textColor="@color/primary"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.361"
+        app:layout_constraintStart_toEndOf="@+id/textView5tv2" />
+
+    <TextView
+        android:id="@+id/textView5tv2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginBottom="32dp"
+        android:text="Sudah punya akun?"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/labelNama"
+        android:id="@+id/daftar_labelNama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="288dp"
+        android:layout_marginTop="16dp"
         android:text="Nama Lengkap"
-        android:textColor="#000000"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.174"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/daftar_kolom_email" />
 
     <EditText
         android:id="@+id/daftar_kolom_nama"
         android:layout_width="303dp"
         android:layout_height="45dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="308dp"
+        android:layout_marginTop="3dp"
         android:background="@drawable/rounded_edittext"
         android:ems="10"
         android:hint="Isi nama lengkap Anda di sini.."
+        android:inputType="textPersonName"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textColorHint="#949494"
-        android:textSize="14dp"
-        android:inputType="textPersonName"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/daftar_labelNama" />
 
     <EditText
         android:id="@+id/daftar_kolom_email"
         android:layout_width="305dp"
         android:layout_height="41dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="224dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/rounded_edittext"
         android:ems="10"
         android:hint="Isi email Anda di sini.."
+        android:inputType="textEmailAddress"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textColorHint="#949494"
-        android:textSize="14dp"
-        android:inputType="textEmailAddress"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/daftar_labelEmail" />
+
+    <TextView
+        android:id="@+id/daftar_labelEmail"
+        android:layout_width="116dp"
+        android:layout_height="19dp"
+        android:layout_marginTop="32dp"
+        android:text="Email"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.179"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
         android:id="@+id/daftar_kolom_password"
         android:layout_width="302dp"
         android:layout_height="44dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="388dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/rounded_edittext"
         android:ems="10"
         android:hint="Isi password Anda di sini.."
+        android:inputType="textPassword"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textColorHint="#949494"
-        android:textSize="14dp"
-        android:inputType="textPassword"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/password_labelPassword" />
 
     <Button
         android:id="@+id/daftar_tombol"
-        android:layout_width="301dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="452dp"
-        android:backgroundTint="#1E49CB"
+        android:layout_width="312dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/primary"
         android:fontFamily="sans-serif-medium"
         android:text="Daftar Akun"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:typeface="sans"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/daftar_kolom_password" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
