--- a/app/src/main/res/layout/activity_editprofil.xml
+++ b/app/src/main/res/layout/activity_editprofil.xml
@@ -10,24 +10,24 @@
 
     <ImageView
         android:id="@+id/editprofil_imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="98dp"
+        android:layout_height="101dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="84dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars[3]" />
 
     <Button
         android:id="@+id/editprofil_tombolEditGambar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="164dp"
+        android:layout_marginTop="136dp"
         android:backgroundTint="@color/primary"
         android:text="Ubah Gambar"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.145"
+        app:layout_constraintHorizontal_bias="0.177"
         app:layout_constraintStart_toEndOf="@+id/editprofil_imageView"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -143,13 +143,13 @@
         android:id="@+id/editprofil_tombolKembali"
         android:layout_width="45dp"
         android:layout_height="43dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/button_background"
         android:contentDescription="Kembali"
         android:src="@drawable/ic_back"
-        app:layout_constraintBottom_toTopOf="@+id/editprofil_imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.108"
+        app:layout_constraintHorizontal_bias="0.109"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.484" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
