--- a/app/src/main/res/layout/activity_beranda.xml
+++ b/app/src/main/res/layout/activity_beranda.xml
@@ -42,6 +42,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/rounded_edittext"
         android:iconifiedByDefault="false"
+        android:focusable="true"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:queryHint="Cari sesuatu..."
@@ -49,14 +50,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/beranda_labelusername" />
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listbuku"
-        android:layout_width="0dp"
-        android:layout_height="747dp"
+        android:layout_width="409dp"
+        android:layout_height="582dp"
+        android:layout_marginBottom="36dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_bar" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
