--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -20,33 +20,34 @@
 
     <ImageView
         android:id="@+id/profil_imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="88dp"
+        android:layout_height="91dp"
+        android:layout_marginBottom="512dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.099"
+        app:layout_constraintTop_toBottomOf="@+id/profil_judul"
+        app:layout_constraintVertical_bias="0.27"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/profil_labelEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
         android:text="Email"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.135"
+        app:layout_constraintHorizontal_bias="0.132"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profil_imageView" />
 
     <TextView
         android:id="@+id/profil_labelViewEmail"
         android:layout_width="311dp"
-        android:layout_height="50dp"
+        android:layout_height="35dp"
         android:layout_marginTop="4dp"
         android:paddingStart="16dp"
         android:textColor="@color/black"
@@ -62,19 +63,19 @@
         android:id="@+id/profil_labelNama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
         android:text="Nama Lengkap"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.164"
+        app:layout_constraintHorizontal_bias="0.167"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profil_labelViewEmail" />
 
     <TextView
         android:id="@+id/profil_labelViewNama"
         android:layout_width="309dp"
-        android:layout_height="45dp"
+        android:layout_height="35dp"
         android:layout_marginTop="4dp"
         android:text="TextView"
         android:paddingStart="16dp"
@@ -90,19 +91,19 @@
         android:id="@+id/profil_labelUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="8dp"
         android:text="Username"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.141"
+        app:layout_constraintHorizontal_bias="0.144"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profil_labelViewNama" />
 
     <TextView
         android:id="@+id/profil_labelViewUsername"
         android:layout_width="309dp"
-        android:layout_height="41dp"
+        android:layout_height="35dp"
         android:layout_marginTop="4dp"
         android:text="TextView"
         android:paddingStart="16dp"
@@ -116,10 +117,10 @@
     <Button
         android:id="@+id/profil_tombolEdit"
         android:layout_width="307dp"
-        android:layout_height="61dp"
+        android:layout_height="50dp"
         android:layout_marginTop="35dp"
         android:layout_marginBottom="180dp"
-        android:backgroundTint="#1E49CB"
+        android:backgroundTint="@color/primary"
         android:text="Ubah Data"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -127,6 +128,101 @@
         app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profil_labelViewUsername"
-        app:layout_constraintVertical_bias="0.541" />
+        app:layout_constraintVertical_bias="0.0" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="24dp"
+        android:background="@color/primary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profil_tombolEdit" />
+
+    <TextView
+        android:id="@+id/profil_judul"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Profil pengguna"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/button_buku_favorit"
+        android:layout_width="366dp"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button_background"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view">
+
+        <ImageView
+            android:id="@+id/icon_buku"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:contentDescription="Ikon Buku"
+            android:src="@drawable/icon_buku"
+            app:tint="@color/white" />
+
+        <TextView
+            android:id="@+id/text_buku_favorit"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
+            android:text="Buku Favorit"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/icon_panah_kanan"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:contentDescription="Ikon Panah Kanan"
+            android:src="@drawable/ic_arrow_right"
+            app:tint="@color/white" />
+    </LinearLayout>
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/primary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_buku_favorit" />
+
+    <Button
+        android:id="@+id/profil_tombolKeluar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#D30000"
+        android:text="Keluar Akun"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
