--- a/app/src/main/res/layout/item_buku.xml
+++ b/app/src/main/res/layout/item_buku.xml
@@ -28,6 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Judul Buku"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -35,6 +36,7 @@
                 android:id="@+id/book_author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:text="Penulis"
                 android:textSize="14sp"
                 android:paddingTop="4dp" />
